<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckInActivity">

    <!-- ImageView logo bwigo -->
    <ImageView
        android:layout_width="184dp"
        android:layout_height="89dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/bwigo_logo" />

    <!-- EditText email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/editText_margin">

        <EditText
            android:id="@+id/et_ci_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/check_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- EditText password -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/editText_margin">

        <EditText
            android:id="@+id/et_ci_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/check_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- EditText confirm password -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/editText_margin">

        <EditText
            android:id="@+id/et_ci_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/check_password_confirm"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Button check in -->
    <Button
        android:id="@+id/btn_check_in"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/check_do_checkin" />

    <!-- TextView terminos y condiciones -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/terminos_y_condiciones"
            android:textColor="@color/colorBwigoComplementaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_ci_term_cond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/textView3"
            android:text="@string/terminos_condiciones_link"
            android:textColor="@color/colorBwigoPrimary"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>