<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/pb_login"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <!-- ImageView logo -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="161dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/bwigo_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="55dp"
        android:layout_margin="@dimen/editText_margin">

        <!-- EditText numero de afiliado -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_login_numero_afiliado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--ImageButton
            android:id="@+id/btn_scan"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:src="@drawable/ic_photo_camera_black_24dp"
            android:layout_weight="1"/-->

    </LinearLayout>

    <!-- EditText password -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/editText_margin">

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Button to recover password -->
    <Button
        android:id="@+id/btn_recover_password"
        style="@style/AppTheme.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/login_forgot_password"
        android:textAlignment="textEnd"
        android:theme="@style/AppTheme" />

    <!-- Button to do login -->
    <Button
        android:id="@+id/btn_login"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login_do_login" />

    <!-- Button to do Check In -->
    <Button
        android:id="@+id/btn_login_check_in"
        style="@style/AppTheme.Button.Borderless.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/login_check_in"
        android:visibility="gone"/>
    <!-- Button to do Check In -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/terminos_y_condiciones"
            android:textColor="@color/colorBwigoComplementaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_lg_term_cond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/textView3"
            android:text="@string/terminos_condiciones_link"
            android:textColor="@color/colorBwigoPrimary"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>